[workspace]
members = [
    "buffer",
    "build_utils",
    "c_entrypoint/*",
    "ffi",
    "inverted_index",
    "inverted_index_bencher",
    "fnv",
    "low_memory_thin_vec",
    "qint",
    "query_error",
    "redis_mock",
    "result_processor",
    "rlookup",
    "rqe_iterators",
    "rqe_iterators_bencher",
    "search_result",
    "slots_tracker",
    "sorting_vector",
    "tools/license_header_linter",
    "trie_bencher",
    "trie_rs",
    "value",
    "varint",
    "varint_bencher",
    "wildcard",
]

resolver = "3"

[workspace.lints.clippy]
# `unsafe` pushes on you, the developer, the responsibility
# to uphold invariants that the compiler cannot verify via static analysis.
# We therefore require documentation in two locations:
# - When defining `unsafe` functions, we must document what preconditions
#   must be met to use the function safely (i.e. without causing undefined behavior)
#   This is caught by the `clippy::missing_safety_doc` lint, which is `warn`
#   by default.
# - When invoking `unsafe` functions, we must document why the preconditions
#   are met. This is caught by the `clippy::undocumented_unsafe_blocks` lint,
#   which is `allow` by default and we're raising to `warn` here.
# Without this documentation it is significantly harder to reason about the
# safety of the code.
undocumented_unsafe_blocks = "warn"
# Each unsafe operation has different preconditions and postconditions.
# By wrapping each unsafe operation in its own block, we can ensure that
# each operation is used safely and that the preconditions and postconditions
# are met.
# We can also more easily track the amount of unsafe operations throughout
# the codebase.
multiple_unsafe_ops_per_block = "warn"
# Ensure const usage to allow for more compile-time optimizations.
missing_const_for_fn = "warn"

[workspace.package]
version = "0.0.1"
edition = "2024"
license-file = "../../LICENSE.txt"
publish = false

[workspace.dependencies]
c_ffi_utils = { path = "./c_entrypoint/c_ffi_utils" }
ffi = { path = "./ffi", default-features = false }
fnv = { path = "./fnv" }
inverted_index = { path = "./inverted_index" }
low_memory_thin_vec = { path = "./low_memory_thin_vec" }
redis_mock = { path = "./redis_mock" }
trie_rs = { path = "./trie_rs" }
wildcard = { path = "./wildcard" }
buffer = { path = "./buffer" }
query_error = { path = "./query_error" }
result_processor = { path = "./result_processor" }
slots_tracker = { path = "./slots_tracker" }
sorting_vector = { path = "./sorting_vector"}
value = { path = "./value" }
varint = { path = "./varint" }
qint = { path = "./qint" }
rlookup = { path = "./rlookup" }
rqe_iterators = { path = "./rqe_iterators" }
search_result = { path = "./search_result" }

cbindgen = "0.29"
cc = "1"
crc32fast = "1.4.2"
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3.1"
enumflags2 = "0.7.12"
fs-err = "3.1.0"
icu_casemap = "2.0.0"
insta = "1.42.2"
itertools = "0.14.0"
lending-iterator = "0.1.7"
libc = "0.2.170"
memchr = "2.7.4"
pretty_assertions = "1.4.1"
proptest = { version = "1.6.0", default-features = false }
proptest-derive = { version = "0.5.1", default-features = false }
rand = "0.9.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.226", features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.12"
ureq = "3.0.10"
wildcard_cloudflare = { package = "wildcard", version = "0.3.0" }
pin-project = "1.1.10"
strum = {version = "0.27.2",features = ["derive"]}
unsafe-tools = "0.1.1"

[workspace.dependencies.bindgen]
version = "0.72"
default-features = false

[workspace.dependencies.redis-module]
git = "https://github.com/RedisLabsModules/redismodule-rs.git"
rev = "1ab84014c096dbfd431de0e34d174d15f16c0e42"
default-features = false

[profile.release]
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

# A profile for fast test execution that doesn't sacrifice
# runtime checks and debuggability.
[profile.optimised_test]
# Like `release`, but:
inherits = "release"
# - Emit debug symbols
debug = true
# - Enable debug assertions
debug-assertions = true
# - Enable runtime overflow checks
overflow-checks = true
