[workspace]
members = [
    "buffer",
    "build_utils",
    "c_entrypoint/*",
    "c_trie",
    "document",
    "ffi",
    "field",
    "fnv",
    "generational_slab",
    "hyperloglog",
    "inverted_index",
    "inverted_index_bencher",
    "numeric_range_tree",
    "thin_vec",
    "qint",
    "query_error",
    "query_term",
    "redis_json_api",
    "redis_mock",
    "redis_reply",
    "result_processor",
    "rlookup",
    "rqe_iterators",
    "rqe_iterators_bencher",
    "rqe_iterators_interop",
    "rqe_iterators_test_utils",
    "search_result",
    "slots_tracker",
    "sorting_vector",
    "tools/license_header_linter",
    "tools/ffi_geiger",
    "tools/safety_report",
    "tracing_redismodule",
    "trie_bencher",
    "trie_rs",
    "value",
    "varint",
    "varint_bencher",
    "wildcard",
    "workspace_hack",
    "idf",
]

resolver = "3"

[workspace.lints.clippy]
# `unsafe` pushes on you, the developer, the responsibility
# to uphold invariants that the compiler cannot verify via static analysis.
# We therefore require documentation in two locations:
# - When defining `unsafe` functions, we must document what preconditions
#   must be met to use the function safely (i.e. without causing undefined behavior)
#   This is caught by the `clippy::missing_safety_doc` lint, which is `warn`
#   by default.
# - When invoking `unsafe` functions, we must document why the preconditions
#   are met. This is caught by the `clippy::undocumented_unsafe_blocks` lint,
#   which is `allow` by default and we're raising to `warn` here.
# Without this documentation it is significantly harder to reason about the
# safety of the code.
undocumented_unsafe_blocks = "warn"
# Each unsafe operation has different preconditions and postconditions.
# By wrapping each unsafe operation in its own block, we can ensure that
# each operation is used safely and that the preconditions and postconditions
# are met.
# We can also more easily track the amount of unsafe operations throughout
# the codebase.
multiple_unsafe_ops_per_block = "warn"
# Ensure const usage to allow for more compile-time optimizations.
missing_const_for_fn = "warn"
# These types are specified in clippy.toml.
disallowed_types = "warn"

[workspace.lints.rustdoc]
# Our doc comments are designed for engineers who are building RediSearch,
# not end-users. Therefore there's no issue with private intra-doc links.
private-intra-doc-links = "allow"

[workspace.package]
version = "0.0.1"
edition = "2024"
license-file = "../../LICENSE.txt"
publish = false

[workspace.dependencies]
buffer = { path = "./buffer" }
build_utils = { path = "./build_utils" }
c_ffi_utils = { path = "./c_entrypoint/c_ffi_utils" }
c_trie = { path = "./c_trie" }
document = { path = "./document" }
ffi = { path = "./ffi", default-features = false }
field = { path = "./field" }
fnv = { path = "./fnv" }
generational_slab = { path = "./generational_slab" }
hyperloglog = { path = "./hyperloglog" }
idf = { path = "./idf" }
inverted_index = { path = "./inverted_index" }
numeric_range_tree = { path = "./numeric_range_tree" }
redis_reply = { path = "./redis_reply" }
qint = { path = "./qint" }
query_error = { path = "./query_error" }
query_term = { path = "./query_term" }
redis_json_api = { path = "./redis_json_api" }
redis_mock = { path = "./redis_mock" }
redisearch_rs = { path = "./c_entrypoint/redisearch_rs" }
result_processor = { path = "./result_processor" }
rlookup = { path = "./rlookup" }
rqe_iterators = { path = "./rqe_iterators" }
rqe_iterators_interop = { path = "./rqe_iterators_interop" }
rqe_iterators_test_utils = { path = "./rqe_iterators_test_utils" }
search_result = { path = "./search_result" }
slots_tracker = { path = "./slots_tracker" }
sorting_vector = { path = "./sorting_vector" }
thin_vec = { path = "./thin_vec" }
tracing_redismodule = { path = "./tracing_redismodule" }
trie_rs = { path = "./trie_rs" }
value = { path = "./value" }
varint = { path = "./varint" }
wildcard = { path = "./wildcard" }
workspace_hack = { path = "./workspace_hack" }

ahash = "0.8"
anstyle-query = "1.1.5"
anyhow = "1"
approx = "0.6.0-rc2"
bindgen = { version = "0.72", default-features = false }
cargo_metadata = "0.19"
bytecount = "0.6.9"
cbindgen = "0.29"
cc = "1.2.53"
crc32fast = "1.5.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
csv = "1.4.0"
enumflags2 = "0.7.12"
fs-err = "3.2.2"
hash32 = "1"
icu_casemap = "2.1.1"
insta = "1.46.1"
itertools = "0.14.0"
lending-iterator = "0.1.7"
libc = "0.2.180"
memchr = "2.7.6"
pin-project = "1.1.10"
pretty_assertions = "1.4.1"
proc-macro2 = "1"
proptest = { version = "1.9.0", default-features = false }
proptest-derive = { version = "0.7.0", default-features = false }
rstest = { version = "0.26", default-features = false }
quote = "1"
rand = "0.9.2"
rmp-serde = "1.3.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = "2"
# need "unstable" for the "default_log_filter" attribute allowing to override the default level (info).
test-log = { version = "0.2", features = ["trace", "unstable"] }
thiserror = "2.0.18"
toml = "0.9"
tracing = "0.1.44"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
unsafe-tools = "0.1.2"
ureq = "3.1"
walkdir = "2"
wildcard_cloudflare = { package = "wildcard", version = "0.3.0" }
wyhash = "0.5"
xxhash-rust = "0.8"

[workspace.dependencies.redis-module]
git = "https://github.com/RedisLabsModules/redismodule-rs.git"
rev = "06d55e5c03eeb2c96a60e0d519b9362429312d98"
default-features = false

[profile.release]
# - Aggressive link-time optimization, to maximize performance
#   at the expense of build time.
lto = "fat"
codegen-units = 1
# The RediSearch release process will extract debug symbols
# from the final redisearch.so file into a separate debug file.
# The shared object will then be stripped, to minimize its size.
# In order to get Rust symbols into that debug file, we need
# to include them by default in release builds.
debug = true

# A profile for fast test execution that doesn't sacrifice
# runtime checks and debuggability.
[profile.optimised_test]
# Like `release`, but:
inherits = "release"
# - Less aggressive link-time optimization, to recover
#   parallelism in the build.
lto = "thin"
codegen-units = 16
# - Enable debug assertions
debug-assertions = true
# - Enable runtime overflow checks
overflow-checks = true
