[workspace]
members = [
    "build_utils",
    "c_entrypoint/*",
    "c_wrappers/*",
    "document",
    "ffi",
    "field",
    "fnv",
    "fork_gc",
    "generational_slab",
    "geo",
    "hyperloglog",
    "index_result",
    "inverted_index",
    "inverted_index_bencher",
    "numeric_range_tree",
    "thin_vec",
    "qint",
    "query_error",
    "query_flags",
    "query_term",
    "rdb_io",
    "redis_json_api",
    "redis_mock",
    "redis_reply",
    "result_processor",
    "rlookup",
    "query_types",
    "reducers",
    "ref_mode",
    "rqe_iterator_type",
    "rqe_core",
    "rqe_iterators",
    "rqe_iterators_bencher",
    "rqe_iterators_test_utils",
    "search_result",
    "slots_tracker",
    "sorting_vector",
    "spellcheck_dictionary",
    "string_utils",
    "tag_index",
    "term_suffix_index",
    "tools/license_header_linter",
    "tools/ffi_geiger",
    "tools/safety_report",
    "tracing_assert",
    "tracing_redismodule",
    "trie_bencher",
    "top_k",
    "top_k_bencher",
    "vector_score_source",
    "vector_score_source_bencher",
    "numeric_score_source",
    "trie_rs",
    "ttl_table",
    "utf8parse",
    "ttl_table_bencher",
    "value",
    "varint",
    "varint_bencher",
    "rqe_wildcard",
    "workspace_hack",
    "idf",
    "query_eval",
]

resolver = "3"

[workspace.lints.clippy]
# `unsafe` pushes on you, the developer, the responsibility
# to uphold invariants that the compiler cannot verify via static analysis.
# We therefore require documentation in two locations:
# - When defining `unsafe` functions, we must document what preconditions
#   must be met to use the function safely (i.e. without causing undefined behavior)
#   This is caught by the `clippy::missing_safety_doc` lint, which is `warn`
#   by default.
# - When invoking `unsafe` functions, we must document why the preconditions
#   are met. This is caught by the `clippy::undocumented_unsafe_blocks` lint,
#   which is `allow` by default and we're raising to `warn` here.
# Without this documentation it is significantly harder to reason about the
# safety of the code.
undocumented_unsafe_blocks = "warn"
# Each unsafe operation has different preconditions and postconditions.
# By wrapping each unsafe operation in its own block, we can ensure that
# each operation is used safely and that the preconditions and postconditions
# are met.
# We can also more easily track the amount of unsafe operations throughout
# the codebase.
multiple_unsafe_ops_per_block = "warn"
# Ensure const usage to allow for more compile-time optimizations.
missing_const_for_fn = "warn"
# These types are specified in clippy.toml.
disallowed_types = "warn"
# Use `#[expect]` instead of `#[allow]` so we are warned when they become obsolete.
allow_attributes = "warn"

[workspace.lints.rustdoc]
# Our doc comments are designed for engineers who are building RediSearch,
# not end-users. Therefore there's no issue with private intra-doc links.
private-intra-doc-links = "allow"

[workspace.package]
version = "0.0.1"
edition = "2024"
license-file = "../../LICENSE.txt"
publish = false

[workspace.dependencies]
buffer = { path = "./c_wrappers/buffer" }
build_utils = { path = "./build_utils" }
c_ffi_utils = { path = "./c_entrypoint/c_ffi_utils" }
c_trie = { path = "./c_wrappers/c_trie" }
document = { path = "./document" }
dict = { path = "./c_wrappers/dict" }
document_metadata = { path = "./c_wrappers/document_metadata" }
ffi = { path = "./ffi", default-features = false }
field = { path = "./field" }
field_spec = { path = "./c_wrappers/field_spec" }
fnv = { path = "./fnv" }
fork_gc = { path = "./fork_gc" }
generational_slab = { path = "./generational_slab" }
geo = { path = "./geo" }
hidden_string = { path = "./c_wrappers/hidden_string" }
hyperloglog = { path = "./hyperloglog" }
idf = { path = "./idf" }
index_spec = { path = "./c_wrappers/index_spec" }
index_result = { path = "./index_result" }
index_spec_cache = { path = "./c_wrappers/index_spec_cache" }
inverted_index = { path = "./inverted_index" }
numeric_range_tree = { path = "./numeric_range_tree" }
numeric_score_source = { path = "./numeric_score_source" }
redis_reply = { path = "./redis_reply" }
qint = { path = "./qint" }
query = { path = "./c_wrappers/query" }
query_error = { path = "./query_error" }
query_eval = { path = "./query_eval" }
query_flags = { path = "./query_flags" }
query_term = { path = "./query_term" }
redis_json_api = { path = "./redis_json_api" }
redis_mock = { path = "./redis_mock" }
redisearch_rs = { path = "./c_entrypoint/redisearch_rs" }
reducers = { path = "./reducers" }
ref_mode = { path = "./ref_mode" }
result_processor = { path = "./result_processor" }
rlookup = { path = "./rlookup" }
rm_array = { path = "./c_wrappers/rm_array" }
rs_token = { path = "./c_wrappers/rs_token" }
query_types = { path = "./query_types" }
rqe_core = { path = "./rqe_core" }
rqe_iterator_type = { path = "./rqe_iterator_type" }
rqe_iterators = { path = "./rqe_iterators" }
rqe_iterators_test_utils = { path = "./rqe_iterators_test_utils" }
schema_rule = { path = "./c_wrappers/schema_rule" }
search_disk = { path = "./c_wrappers/search_disk" }
search_result = { path = "./search_result" }
slots_tracker = { path = "./slots_tracker" }
sorting_vector = { path = "./sorting_vector" }
string_utils = { path = "./string_utils" }
term_suffix_index = { path = "./term_suffix_index" }
thin_vec = { path = "./thin_vec" }
top_k = { path = "./top_k" }
tracing_assert = { path = "./tracing_assert" }
vecsim = { path = "./c_wrappers/vecsim" }
vector_score_source = { path = "./vector_score_source" }
tracing_redismodule = { path = "./tracing_redismodule" }
trie_rs = { path = "./trie_rs" }
rdb_io = { path = "./rdb_io" }
ttl_table = { path = "./ttl_table" }
value = { path = "./value" }
varint = { path = "./varint" }
rqe_wildcard = { path = "./rqe_wildcard" }
workspace_hack = { path = "./workspace_hack" }

ahash = "0.8"
bumpalo = "3"
anstyle-query = "1.1.5"
anyhow = "1"
approx = "0.6.0-rc2"
bindgen = { version = "0.72", default-features = false }
cargo_metadata = "0.19"
bytecount = "0.6.9"
cc = "1.2.53"
cheadergen = { version = "0.3.1" }
crc32fast = "1.5.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
csv = "1.4.0"
decorum = "0.4"
enumflags2 = "0.7.12"
fs-err = "3.2.2"
hash32 = "1"
icu_casemap = "2.2.0"
insta = "1.46.1"
itertools = "0.15.0"
lending-iterator = "0.1.7"
libc = "0.2.180"
nix = { version = "0.26", default-features = false, features = ["poll"] }
memchr = "2.7.6"
pin-project = "1.1.10"
pretty_assertions = "1.4.1"
proc-macro2 = "1"
proptest = { version = "1.9.0", default-features = false }
proptest-derive = { version = "0.7.0", default-features = false }
rstest = { version = "0.26", default-features = false }
rstest_reuse = "0.7"
quote = "1"
rand = "0.10.1"
rmp-serde = "1.3.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smallvec = "1.15.1"
strsim = "0.11.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = "2"
# need "unstable" for the "default_log_filter" attribute allowing to override the default level (info).
test-log = { version = "0.2", features = ["trace", "unstable"] }
thiserror = "2.0.18"
triomphe = "0.1.2"
toml = "0.9"
tracing = "0.1.44"
tracing_log_error = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
unsafe-tools = "0.1.2"
ureq = "3.1"
utf8parse = { path = "./utf8parse" }
walkdir = "2"
wildcard_cloudflare = { package = "wildcard", version = "0.3.0" }
wyhash = "0.5"
xxhash-rust = "0.8"

[workspace.dependencies.redis-module]
git = "https://github.com/RedisLabsModules/redismodule-rs.git"
rev = "7fb620f1ef42453dea4e22c9358d0d25d4224710"
default-features = false

[profile.release]
# - Aggressive link-time optimization, to maximize performance
#   at the expense of build time.
lto = "fat"
codegen-units = 1
# The RediSearch release process will extract debug symbols
# from the final redisearch.so file into a separate debug file.
# The shared object will then be stripped, to minimize its size.
# In order to get Rust symbols into that debug file, we need
# to include them by default in release builds.
debug = true

# A profile for fast test execution that doesn't sacrifice
# runtime checks and debuggability.
[profile.optimised_test]
# Like `release`, but:
inherits = "release"
# - Less aggressive link-time optimization, to recover
#   parallelism in the build.
lto = "thin"
codegen-units = 16
# - Enable debug assertions
debug-assertions = true
# - Enable runtime overflow checks
overflow-checks = true
